# optzer

./: LICENSE  README.md  pyproject.toml  setup.py  upload.sh
examples/01_simple_example/: README.ipynb  Running_on_jupyter.ipynb  data.ref.simple  in.optzer  in.params.simple  in.vars.optzer  makefile  out.optzer.REF  simple_func.py  subjob.sh  test.py
examples/02_pmd_LZP/: README.md  data.ref.adf  data.ref.lat  data.ref.rdf  data.ref.vol  in.optzer  in.params.Coulomb  in.params.Morse  in.params.angular  in.pmd.NpT  in.vars.optzer  makefile  out.optzer.REF  subjob.sh  test.py
optzer/: __init__.py  cs.py  db2csv.py  db2prms.py  de.py  get_best.py  individual.py  ingo.py  io.py  main.py  opt2md.py  opt2prms.py  out2md.py  out2prms.py  testfunc.py  tpe.py
tmp/: setup.py
